assets/css/main.css
/* ... */
/* Button */

input[type="button"],
input[type="submit"],
input[type="reset"],
button,
.button {
	background-image: url("images/bg.png"), -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
	background-image: url("images/bg.png"), -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
	background-image: url("images/bg.png"), -ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
	background-image: url("images/bg.png"), linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
	-moz-transition: background-color .2s ease-in-out;
	-webkit-transition: background-color .2s ease-in-out;
	-ms-transition: background-color .2s ease-in-out;
	transition: background-color .2s ease-in-out;
	-webkit-appearance: none;
	position: relative;
	display: inline-block;
	color: #fff !important;
	text-decoration: none;
	font-weight: 700;
	border: 0;
	outline: 0;
	cursor: pointer;
	border-radius: 8px;
	text-shadow: -1px -1px 0.5px rgba(0, 0, 0, 0.5);
	overflow: hidden;
	box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.5), inset 0px 2px 1px 0px rgba(255, 255, 255, 0.75);
	background-color: #282828;
	padding: 1em 2.35em 1em 2.35em;
	font-size: 1.1em;
	max-width: 24em;
}

input[type="button"]:hover,
input[type="submit"]:hover,
input[type="reset"]:hover,
button:hover,
.button:hover {
	background-color: #4f4f4f;
	color: #fff !important;
}

input[type="button"]:active,
input[type="submit"]:active,
input[type="reset"]:active,
button:active,
.button:active {
	background-color: #3BA8D3;
	top: 1px;
}

input[type="button"].large,
input[type="submit"].large,
input[type="reset"].large,
button.large,
.button.large {
	font-size: 1.5em;
	letter-spacing: -0.025em;
}

input[type="button"].alt,
input[type="submit"].alt,
input[type="reset"].alt,
button.alt,
.button.alt {
	background-color: #444;
	box-shadow: inset 0px 0px 0px 1px #242424, inset 0px 2px 1px 0px rgba(255, 255, 255, 0.2);
}

input[type="button"].alt:hover,
input[type="submit"].alt:hover,
input[type="reset"].alt:hover,
button.alt:hover,
.button.alt:hover {
	background-color: #4f4f4f;
	color: #fff !important;
}

input[type="button"].alt:active,
input[type="submit"].alt:active,
input[type="reset"].alt:active,
button.alt:active,
.button.alt:active {
	background-color: #3f3f3f;
}

/* List */

ul {
	list-style: disc;
	padding-left: 1em;
}

ul li {
	padding-left: 0.5em;
}

ol {
	list-style: decimal;
	padding-left: 1.25em;
}

ol li {
	padding-left: 0.25em;
}

/* Social */

ul.social {
	cursor: default;
	margin: 0;
	list-style: none;
	padding-left: 0;
}

ul.social li {
	position: relative;
	display: inline-block;
	margin: 0.25em;
	top: 0;
	padding-left: 0;
}

ul.social li a {
	-moz-transition: top .2s ease-in-out;
	-webkit-transition: top .2s ease-in-out;
	-ms-transition: top .2s ease-in-out;
	transition: top .2s ease-in-out;
	display: block;
	width: 48px;
	height: 48px;
	border-radius: 6px;
	top: 0;
	position: relative;
}

ul.social li a:before {
	background-image: url("images/bg.png"), -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
	background-image: url("images/bg.png"), -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
	background-image: url("images/bg.png"), -ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
	background-image: url("images/bg.png"), linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
	-moz-transition: background-color .2s ease-in-out;
	-webkit-transition: background-color .2s ease-in-out;
	-ms-transition: background-color .2s ease-in-out;
	transition: background-color .2s ease-in-out;
	background-color: #444;
	border-radius: 6px;
	box-shadow: inset 0px 0px 0px 1px #282828, inset 0px 2px 1px 0px rgba(255, 255, 255, 0.1);
	color: #2E2E2E !important;
	display: block;
	font-size: 26px;
	height: 48px;
	line-height: 48px;
	text-align: center;
	outline: 0;
	overflow: hidden;
	text-shadow: 1px 1px 0px rgba(255, 255, 255, 0.1);
	width: 48px;
}

ul.social li a.fa-twitter {
	background-color: #2DAAE4;
}

ul.social li a.fa-facebook-f {
	background-color: #3C5A98;
}

ul.social li a.fa-dribbble {
	background-color: #C4376B;
}

ul.social li a.fa-linkedin-in {
	background-color: #006599;
}

ul.social li a.fa-tumblr {
	background-color: #51718A;
}

ul.social li a.fa-google-plus {
	background-color: #DA2713;
}

ul.social li a.fa-github {
	background-color: #FAFAFA;
}

ul.social li a.fa-rss {
	background-color: #F2600B;
}

ul.social li a.fa-instagram {
	background-color: #E0D7C8;
}

ul.social li a.fa-foursquare {
	background-color: #39A3D4;
}

ul.social li a.fa-skype {
	background-color: #10BEF1;
}

ul.social li a.fa-soundcloud {
	background-color: #FE5419;
}

ul.social li a.fa-youtube {
	background-color: #BF2E25;
}

ul.social li a.fa-blogger {
	background-color: #FF6501;
}

ul.social li a.fa-flickr {
	background-color: #0062DB;
}

ul.social li a.fa-vimeo {
	background-color: #4C8AB0;
}

ul.social li a:hover {
	top: -5px;
}

ul.social li a:hover:before {
	background-color: transparent;
}

/* Actions */

ul.actions {
	list-style: none;
	padding-left: 0;
}

ul.actions li {
	display: inline-block;
	margin: 0 0 0 1em;
	padding-left: 0;
}

ul.actions li:first-child {
	margin-left: 0;
}

/* Box */

.box {
	background: #fff;
	box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.15), 0px 2px 3px 0px rgba(0, 0, 0, 0.1);
	text-align: center;
	padding: 2em;
	height: 100%;
}

.box.style1 {
	padding: 3em 2em 3.5em 2em;
}

.box.style1 h3 {
	margin-bottom: 0.5em;
}

.box.style2 h3 {
	margin-bottom: 0.25em;
}

.box.style2 .image {
	position: relative;
	left: 2em;
	top: 2em;
	margin: -4em 0 4em -4em;
	width: auto;
}

/* Icons */

.icon {
	text-decoration: none;
	text-decoration: none;
}

.icon:before {
	-moz-osx-font-smoothing: grayscale;
	-webkit-font-smoothing: antialiased;
	display: inline-block;
	font-style: normal;
	font-variant: normal;
	text-rendering: auto;
	line-height: 1;
	text-transform: none !important;
	font-family: 'Font Awesome 5 Free';
	font-weight: 400;
}
/* ... */

